--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'com.google.secrets_gradle_plugin' version '0.5'
+
 }
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
@@ -42,6 +44,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:20.0.4'
     implementation 'com.google.firebase:firebase-firestore:22.1.2'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
+    //tab layout
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 
 
     //navigation component
@@ -57,6 +64,7 @@ dependencies {
 
     //Firebase Auth
     implementation 'com.google.firebase:firebase-auth-ktx:20.0.3'
+
 
     //Retrofit
     implementation 'com.google.code.gson:gson:2.8.2'
@@ -90,7 +98,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
 
     //New Material Design
-    implementation 'com.google.android.material:material:1.1.0-alpha07'
+    implementation 'com.google.android.material:material:1.4.0-alpha02'
 
     //Kodein Dependency Injection
     implementation "org.kodein.di:kodein-di-generic-jvm:6.2.1"
