--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ plugins {
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: "androidx.navigation.safeargs.kotlin"
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 30
@@ -49,6 +50,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
     //tab layout
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
 
 
     //navigation component
