--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
     //tab layout
-    implementation "androidx.viewpager2:viewpager2:1.0.0"
+    implementation 'androidx.viewpager2:viewpager2:1.0.0-alpha02'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
 
 
@@ -59,6 +59,9 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
     implementation "androidx.navigation:navigation-compose:1.0.0-alpha10"
+
+    //Places API
+    implementation 'com.google.android.libraries.places:places:2.4.0'
 
     //Firebase
     implementation platform('com.google.firebase:firebase-bom:27.0.0')
