--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,12 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
+    implementation 'com.google.android.material:material:1.2.1'
+    implementation("androidx.coordinatorlayout:coordinatorlayout:1.1.0")
+
+    //bottom sheet
+
+
     //tab layout
     implementation 'androidx.viewpager2:viewpager2:1.0.0-alpha02'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
