--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,12 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'com.google.secrets_gradle_plugin' version '0.5'
+    id 'androidx.navigation.safeargs.kotlin'
 
 }
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
-apply plugin: "androidx.navigation.safeargs.kotlin"
+//apply plugin: "androidx.navigation.safeargs.kotlin"
 apply plugin: 'com.android.application'
 
 android {
@@ -38,6 +39,7 @@ android {
     }
     buildFeatures {
         dataBinding true
+        viewBinding true
     }
 }
 
@@ -54,11 +56,9 @@ dependencies {
 
     //bottom sheet
 
-
     //tab layout
     implementation 'androidx.viewpager2:viewpager2:1.0.0-alpha02'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
-
 
     //navigation component
     def nav_version = "2.3.5"
@@ -66,6 +66,7 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
     implementation "androidx.navigation:navigation-compose:1.0.0-alpha10"
+//    implementation "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
     //Places API
     implementation 'com.google.android.libraries.places:places:2.4.0'
@@ -76,8 +77,7 @@ dependencies {
 
     //Firebase Auth
     implementation 'com.google.firebase:firebase-auth-ktx:20.0.3'
-
-
+    
     //Retrofit
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
