--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.android.material:material:1.4.0-rc01'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation("androidx.coordinatorlayout:coordinatorlayout:1.1.0")
 
@@ -71,6 +71,9 @@ dependencies {
     //Places API
     implementation 'com.google.android.libraries.places:places:2.4.0'
 
+    //Google Map Route
+    implementation 'com.google.maps.android:android-maps-utils:2.2.3'
+
     //Firebase
     implementation platform('com.google.firebase:firebase-bom:27.0.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
@@ -83,6 +86,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.9.0'
+
 
     //Okhttp3
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
