--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     //tab layout
     implementation 'androidx.viewpager2:viewpager2:1.0.0-alpha02'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
 
     //navigation component
     def nav_version = "2.3.5"
