--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,6 @@ plugins {
 }
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
-//apply plugin: "androidx.navigation.safeargs.kotlin"
 apply plugin: 'com.android.application'
 
 android {
@@ -53,6 +52,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0-rc01'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation("androidx.coordinatorlayout:coordinatorlayout:1.1.0")
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-alpha02'
 
     //Floating Search
     implementation 'com.github.arimorty:floatingsearchview:2.1.1'
@@ -72,6 +72,8 @@ dependencies {
 
     //Places API
     implementation 'com.google.android.libraries.places:places:2.4.0'
+    implementation 'com.google.android.gms:play-services-location:10.0.1'
+//    implementation 'com.google.android.gms:play-services-places:10.0.1'
 
     //Google Map Route
     implementation 'com.google.maps.android:android-maps-utils:2.2.3'
