--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,9 @@ dependencies {
     implementation("androidx.coordinatorlayout:coordinatorlayout:1.1.0")
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-alpha02'
 
+    //Top sheet
+    implementation 'com.github.nawinkhatiwada:TopSheet:1.0.0-alpha2'
+
     //Floating Search
     implementation 'com.github.arimorty:floatingsearchview:2.1.1'
 
@@ -68,6 +71,7 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
     implementation "androidx.navigation:navigation-compose:1.0.0-alpha10"
+//    implementation "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 //    implementation "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
     //Places API
@@ -90,7 +94,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.9.0'
-
 
     //Okhttp3
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
