--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,8 +71,8 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
     implementation "androidx.navigation:navigation-compose:1.0.0-alpha10"
-//    implementation "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
-//    implementation "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+    implementation "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+    implementation "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
     //Places API
     implementation 'com.google.android.libraries.places:places:2.4.0'
