--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,11 +66,11 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
 
     //navigation component
-    def nav_version = "2.3.5"
+    def nav_version = "2.4.0-alpha01"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
-    implementation "androidx.navigation:navigation-compose:1.0.0-alpha10"
+    implementation "androidx.navigation:navigation-compose:$nav_version"
 //    implementation "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 //    implementation "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
